<resources>
    <string name="app_name">Urodzina przypominajka</string>
    #MODEL
    <string name="birthday">Urodziny</string>
    <string name="name_day">Imieniny </string>
    <string name="anniversary">Rocznica</string>
    <string name="party">Impreza</string>
    <string name="title">Tytuł</string>
    #END_MODEL

    #GUI
    <string name="delete">Usuń</string>
    <string name="add">Dodaj</string>
    <string name="showDate">Wybierz date</string>
    <string name="error">Błąd</string>
    <string name="type">Rodzaj</string>
    <string name="background">tło</string>
    <string name="accept">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="add_first_event">Dodaj pierwsze wydarzenie</string>
    <string name="fill_date">Uzupełnij date wydarzenia</string>
    <string name="fill_title">Uzupełnij tytuł wydarzenia</string>
    <string name="ok">OK</string>
    <string name="open_settings">Otwórz ustawienia</string>
    <string name="icons">Ikony</string>
    <string name="authors">Autorzy</string>
    <string name="download_error">Nie udało się załadować wydarzeń</string>
    <string name="saving_error">Nie udało się zapisać wydarzenia</string>
    #END_GUI

    #ADMOB
    <string name="ADMOB_APP_ID">ca-app-pub-2475764705473892~7484598349</string>
    <string name="MAIN_BANNER">ca-app-pub-2475764705473892/7435457843</string>
    #END_ADMOB


    #NOTIFICATIONS
    <string name="notification">Powiadomienie</string>
    <string name="notifications">Powiadomienia</string>
    <string name="channel_id">1013</string>
    <string name="channel_name">BirthdayReminderChannel</string>
    <string name="shared_pref_name">notifications</string>
    <string name="notification_id">notification_id</string>
    <string name="event_id">id_wydarzenia</string>
    <string name="event">wydarzenie</string>
    <string name="notification_info">Aby powiadomienia przychodziły pamiętaj o ich włączęniu w ustawieniach aplikacji</string>
    #END_NOTIFICATIONS

    <string name="first_run">Pierwsze uruchomienie</string>
    <string name="phone">telefon</string>
    <string name="sms">sms</string>
    <string name="removing_error">Nie udało się usunać wydarzeń</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="phone_contact_missing">Nie dodano kontaktu do wydarzenia</string>
    <string name="tablets_land">TabletLandscape</string>
    <string name="normal">normalny</string>
    <string name="add_fragment">fragment dodawania</string>
    <string name="database_name">BirthdayDB</string>
    <string name="no_events">Brak wydarzeń</string>
    <string name="cannot_download_contatcs">Nie udało się pobrać kontaktów</string>
    <string name="add_contact_exception">Nie można dodać wydarzenia. Uruchom aplikacje ponownie.</string>

    //ACRA
    <string name="acra_toast">Aplikacja została zatrzymana, proszę o wysłanie raportu do twórców.</string>
    //END_ACRA
</resources>
