...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/addFirstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@android:color/transparent"
                android:onClick="startFirstAdd"
                android:text="@string/add_first_event"
                android:textColor="@color/steelBlue"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

...
