<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_item_background"
    android:padding="8dp">

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:tint="@color/steelBlue"
        android:contentDescription="@string/event" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/steelBlue"/>

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/steelBlue" />
</LinearLayout>